apps/prowlarr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: prowlarr
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: prowlarr
  template:
    metadata:
      labels:
        run: prowlarr
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: prowlarr
          image: linuxserver/prowlarr
          name: prowlarr
          ports:
            - containerPort: 9696
              name: webui
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:9696/radarr/api/v3/health?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl "http://localhost:9696/radarr/api/v3/system/status?ApiKey=$(sed -ne '/ApiKey/{s/.*<ApiKey>\(.*\)<\/ApiKey>.*/\1/p;q;}' </config/config.xml)"
            initialDelaySeconds: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/config"
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
