apps/prowlarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 9696
    protocol: TCP
    targetPort: 9696
    name: webui
  selector:
    run: prowlarr
